fix logo spacing

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -12,8 +12,8 @@
 .Header-logo {
     display: block !important;
     float: left;
-    margin-left: 250px;
-  margin-right: 30px;
+    margin-left: 18.5%;
+  margin-right: 2.25%;
     height: 80px;
   width: 80px;
 }
